2001-11-18  Joseph S. Myers  <jsm28@cam.ac.uk>

	* wtf/acronyms: Update from NetBSD CVS.

	* battlestar/com1.c: Rename to battlestar/command1.c.
	* battlestar/com2.c: Rename to battlestar/command2.c.
	* battlestar/com3.c: Rename to battlestar/command3.c.
	* battlestar/com4.c: Rename to battlestar/command4.c.
	* battlestar/com5.c: Rename to battlestar/command5.c.
	* battlestar/com6.c: Rename to battlestar/command6.c.
	* battlestar/com7.c: Rename to battlestar/command7.c.
	From NetBSD CVS.
	* exec.objs: Update.
	* battlestar/Makefile.bsd, battlestar/command1.c,
	battlestar/command2.c, battlestar/command3.c,
	battlestar/command4.c, battlestar/command5.c,
	battlestar/command6.c, battlestar/command7.c,
	fortune/datfiles/Makefile.bsd, fortune/datfiles/limerick,
	fortune/fortune/fortune.c, hack/hack.termcap.c, tetris/screen.c:
	Update from NetBSD CVS.
	* fortune/datfiles/farber: New file.  From NetBSD CVS.
	* fortune/datfiles/Makefrag: Update.

	* tetris/screen.c (scr_set): Set VMIN and VTIME.

2001-10-06  Joseph S. Myers  <jsm28@cam.ac.uk>

	* backgammon/backgammon/main.c, hack/hack.fix, monop/monop.c,
	phantasia/phantdefs.h, sail/pl_7.c, wargames/wargames: Update from
	NetBSD CVS.

	* hunt/hunt/hunt.6.in: Correct slime costs.  Bug reported by
	Britton Leo Kerin <fsblk@aurora.uaf.edu>.

2001-09-02  Joseph S. Myers  <jsm28@cam.ac.uk>

	* adventure/setup.c, atc/include.h, boggle/mkdict/mkdict.c,
	fortune/datfiles/fortunes, fortune/datfiles/fortunes-o.real,
	monop/execute.c, sail/main.c, snake/snake/snake.c, worm/worm.6,
	worm/worm.c, wump/wump.c, wtf/acronyms: Update from NetBSD CVS.

2001-08-30  Joseph S. Myers  <jsm28@cam.ac.uk>

	* Version 2.13.

	* COPYING, NEWS, TODO, bsd-games-non-free.lsm, bsd-games.lsm:
	Update.
	* phantasia/Makefrag: Update copyright dates.

	* hunt/hunt/hunt.c, hunt/huntd/get_names.c: Define MAXHOSTNAMELEN
	if not already defined.  May fix Hurd compilation (original patch
	from Igor Khavkine <i_khavki@alcor.concordia.ca>).
