@@ -17821,7 +17821,7 @@ FORTUNE'S FUN FACTS TO KNOW AND TELL:		#1
 	A firefly is not a fly, but a beetle.
 	A giant panda bear is really a member of the racoon family.
 	A black panther is really a leopard that has a solid black coat
-	    rather then a spotted one.
+	    rather than a spotted one.
 	Peanuts are not really nuts.  The majority of nuts grow on trees
 		while peauts grow underground.  They are classified as a
 		legume-part of the pea family.
@@ -41173,7 +41173,7 @@ Test for paraquat:
 	bicarbonate and sodium dithionite. If paraquat is present,
 	the solution will turn blue-green.
 %
-Testing can show the presense of bugs, but not their absence.
+Testing can show the presence of bugs, but not their absence.
 		-- Dijkstra
 %
 Test-tube babies shouldn't throw stones.
