@@ -1400,7 +1400,7 @@ there began to feel her MOUNDS.  And that was an ALMOND JOY which definately
 made his TOOSIE ROLL.
 	He let out a SNICKER as he slipped his BUTTERFINGER up her KIT KAT
 which of course caused the MILKY WAY.  She screamed "OH, HENRY!" as she
-squeezed his PETER, PAUL and ZAGNUTS and said "you're better then the 3
+squeezed his PETER, PAUL and ZAGNUTS and said "you're better than the 3
 MUSKETEERS."
 		-- John Volby (Dr. Dirty), "The Candy Bar Poem"
 %
