@@ -1,10 +1,12 @@
-$NetBSD: acronyms,v 1.94 2001/11/07 04:23:24 hubertf Exp $
+$NetBSD: acronyms,v 1.100 2001/12/04 03:04:16 simonb Exp $
 
 AFAICR	as far as I can recall
 AFAICT	as far as I can tell
 AFAIK	as far as I know
 AFAIR	as far as I recall
+AFD	away from desktop
 AFK	away from keyboard
+AFW	away from window
 AIUI	as I understand it
 AKA	also known as
 ASAP	as soon as possible
@@ -29,6 +31,7 @@ CMIIW	correct me if I'm wrong
 CNP	continued [in my] next post
 CYA	see you around
 DNDK	don't know, don't care
+DSTM	Don't shoot the messenger
 DTRT	do the right thing
 DTWT	do the wrong thing
 DWIM	do what I mean
@@ -42,12 +45,14 @@ FIIR	fuck[ed] if I remember
 FOAD	fall over and die
 FSDO	for some definition of
 FSVO	for some value of
+FTFM	fuck the fuckin' manual!
 FUBAR	fucked up beyond all recognition
 FUD	fear, uncertainty and doubt
 FWIW	for what it's worth
 FYI	for your information
 G	grin
 GMTA	great minds think alike
+GTFO	get the fuck out
 HAND	have a nice day
 HHIS	hanging head in shame
 HTH	hope this helps
@@ -79,6 +84,7 @@ LJBF	let's just be friends
 LMSO	laughing my socks off
 LOL	laughing out loud
 LTNS	long time no see
+MMU	memory management unit
 MOTAS	member of the appropriate sex
 MOTOS	member of the opposite sex
 MOTSS	member of the same sex
@@ -96,13 +102,16 @@ OIC	oh, I see
 OTL	out to lunch
 OTOH	on the other hand
 OTTOMH	off the top of my head
+PFO	please fuck off
 PFY	pimply faced youth
 PITA	pain in the ass
+PKSP	pound keys and spew profanity
 PNG	persona non grata
 POC	point of contact
 POLA	principle of least astonishment
 POS	piece of shit
 PPL	pretty please
+PTV	parental tunnel vision
 QED	quod erat demonstrandum
 RFC	request for comments
 RL	real life
@@ -125,13 +134,16 @@ SNERT	snot-nosed egotistical rude teenager
 SO	significant other
 SOB	son of [a] bitch
 SOL	shit out [of] luck
+SSIA	subject says it all
 SUS	stupid user syndrome
 SWAG	silly, wild-assed guess
 SWAHBI	silly, wild-assed hare-brained idea
+SWMBO	she who must be obeyed
 TANSTAAFL	there ain't no such thing as a free lunch
 TBD	to be {decided,determined,done}
 TIA	thanks in advance
 TLA	three letter acronym
+TLB	translation lookaside buffer
 TMA	too many abbreviations
 TMI	too much information
 TTFN	ta ta for now
@@ -148,4 +160,5 @@ WTF	{what,where,who,why} the fuck
 WTH	{what,where,who,why} the hell
 WYSIWYG	what you see is what you get
 YKWIM	you know what I mean
+YMA	yo momma's ass
 YMMV	your mileage may vary
