@@ -1,3 +1,11 @@
+2001-12-08  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* battlestar/fly.c, cribbage/crib.c, fortune/datfiles/fortunes2,
+	fortune/datfiles/fortunes2-o.real, hangman/setup.c, mille/mille.c,
+	phantasia/Makefile.bsd, phantasia/main.c, robots/main.c,
+	rogue/init.c, sail/pl_7.c, worm/worm.c, wtf/acronyms: Update from
+	NetBSD CVS.
+
 2001-11-18  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* wtf/acronyms: Update from NetBSD CVS.
